Barra de búsqueda

--- a/lista.html
+++ b/lista.html
@@ -9,6 +9,10 @@
 <body>
     <div class="lista-container">
         <h1>Lista de Usuarios</h1>
+        <div id="search-bar">
+            <input type="text" id="search-input" placeholder="Buscar usuario...">
+            <button id="search-button">Buscar</button>
+        </div>
         <div id="lista-grid"></div>
     </div>
 
