Botones bloqueo/desbloqueo

--- a/lista.html
+++ b/lista.html
@@ -9,10 +9,10 @@
 <body>
     <div class="lista-container">
         <h1>Lista de Usuarios</h1>
-        <div id="search-bar">
+        <div class="search-container">
             <input type="text" id="search-input" placeholder="Buscar usuario...">
             <button id="search-button">Buscar</button>
-        </div>
+        </div>        
         <div id="lista-grid"></div>
     </div>
 
